# contracts-tests

./: Cargo.toml  README.md
files_to_pass/io/: Cargo.toml
files_to_pass/io/src/: lib.rs
files_to_pass/src/: contract.rs  lib.rs
files_to_pass/state/: Cargo.toml
files_to_pass/state/src/: lib.rs
ping/: Cargo.toml
ping/io/: Cargo.toml
ping/io/src/: lib.rs
ping/src/: lib.rs
ping/state/: Cargo.toml
staking/: Cargo.toml
staking/src/: lib.rs
tamagotchi/io/: Cargo.toml
tamagotchi/io/src/: lib.rs
tamagotchi/src/: lib.rs
