[package]
name = "ping"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
ping-io.workspace = true
#gear-lib.workspace = true  <- Descomenta

[dev-dependencies]
gtest.workspace = true

[build-dependencies]
ping-io.workspace = true
gear-wasm-builder.workspace = true
